--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vscode
 output
 data/
+common/
 build
 diff_rasterization/diff_rast.egg-info
 diff_rasterization/dist
@@ -9,3 +10,4 @@ tensorboard_3d
 screenshots
 *.pth
 *.zip
+*.ply
