--- a/cfg_files/release/neuman/hugs_scene.yaml
+++ b/cfg_files/release/neuman/hugs_scene.yaml
@@ -117,3 +117,8 @@ scene:
   loss:
     ssim_w: 0.2
     l1_w: 0.8
+    # GOF params
+    dist_from_iter: 15000 
+    dist_w: 0.0
+    depth_normal_from_iter: 15000  
+    depth_normal_w: 0.0
