--- a/cfg_files/release/neuman/hugs_scene.yaml
+++ b/cfg_files/release/neuman/hugs_scene.yaml
@@ -106,6 +106,8 @@ scene:
     scaling: 0.005
     rotation: 0.001
     feature: 0.0025
+    appearance_embeddings: 0.001
+    appearance_network: 0.001
   percent_dense: 0.01
   densification_interval: 100
   opacity_reset_interval: 20000
