--- a/cfg_files/release/neuman/hugs_scene.yaml
+++ b/cfg_files/release/neuman/hugs_scene.yaml
@@ -14,10 +14,10 @@ dataset:
 train:
   batch_size: 1
   num_workers: 0
-  num_steps: 15000
+  num_steps: 5000 # 15000
   save_ckpt_interval: 5000 # 15000
   val_interval: 1000
-  viz_interval: 250 # interval at which training images are saved in train/ dir
+  viz_interval: 1000 # 250 # interval at which training images are saved in train/ dir
   anim_interval: 2000 # 1000 # 15000
   optim_scene: true
   save_progress_images: false
@@ -110,7 +110,7 @@ scene:
     appearance_embeddings: 0.001
     appearance_network: 0.001
   percent_dense: 0.01
-  densification_interval: 100
+  densification_interval: 1000 # how often images are saved w/ GOF image saver
   opacity_reset_interval: 20000
   densify_from_iter: 500
   densify_until_iter: 15000
@@ -121,7 +121,7 @@ scene:
     ssim_w: 0.2
     l1_w: 0.8
     # GOF params
-    dist_w: 100
-    depth_normal_w: 0.05
+    dist_w: 100 # 300 # 350 # 100
+    depth_normal_w: 0.05 # 1 # 0.05
     dist_from_iter: 3000 # 15000 
     depth_normal_from_iter: 1000 # 15000  
