--- a/cfg_files/release/neuman/hugs_human.yaml
+++ b/cfg_files/release/neuman/hugs_human.yaml
@@ -17,6 +17,7 @@ train:
   num_steps: 7000 # 14998
   save_ckpt_interval: 5000 # 15000
   val_interval: 1000
+  viz_interval: 10 # 250 # interval at which training images are saved in train/ dir
   anim_interval: 15000
   optim_scene: true
   save_progress_images: true # false
@@ -69,6 +70,9 @@ human:
     vembed: 0.001
     deformation: 0.0001
     scale_lr_w_npoints: false
+    # GOF params
+    appearance_embeddings: 0.001
+    appearance_network: 0.001
   loss:
     ssim_w: 0.2
     l1_w: 0.8
@@ -78,6 +82,11 @@ human:
     num_patches: 4
     patch_size: 128
     use_patches: 1
+    # GOF params
+    dist_w: 100 # 300 # 350 # 100
+    depth_normal_w: 0.05 # 1 # 0.05
+    dist_from_iter: 3000 # 15000 
+    depth_normal_from_iter: 1000 # 15000  
   densification_interval: 600
   opacity_reset_interval: 3000
   densify_from_iter: 3000
