--- a/cfg_files/ablation/neuman/abl_trimlp.yaml
+++ b/cfg_files/ablation/neuman/abl_trimlp.yaml
@@ -1,5 +1,5 @@
 seed: 0
-mode: human_scene
+mode: human # human_scene
 output_path: output
 exp_name: 20240303_2145_abl_trimlp
 dataset_path: ''
@@ -21,6 +21,7 @@ train:
   optim_scene: true
   save_progress_images: false
   progress_save_interval: 10
+  vis_interval: 10
 human:
   name: hugs_wo_trimlp
   ckpt: null
@@ -69,6 +70,9 @@ human:
     vembed: 0.001
     deformation: 0.0001
     scale_lr_w_npoints: false
+    # GOF params
+    appearance_embeddings: 0.001
+    appearance_network: 0.001
   loss:
     ssim_w: 0.2
     l1_w: 0.8
@@ -78,6 +82,11 @@ human:
     num_patches: 4
     patch_size: 128
     use_patches: 1
+    # GOF params
+    dist_w: 100 # 300 # 350 # 100
+    depth_normal_w: 0.05 # 1 # 0.05
+    dist_from_iter: 3000 # 15000 
+    depth_normal_from_iter: 1000 # 15000 
   densification_interval: 600
   opacity_reset_interval: 3000
   densify_from_iter: 3000
