--- a/cfg_files/ablation/neuman/abl_trimlp.yaml
+++ b/cfg_files/ablation/neuman/abl_trimlp.yaml
@@ -1,7 +1,7 @@
 seed: 0
 mode: human # human_scene
 output_path: experiments
-exp_name: variable_loss_terms
+exp_name: surface_normal_loss
 dataset_path: ''
 detect_anomaly: false
 debug: false
@@ -70,8 +70,8 @@ human:
     deformation: 0.0001
     scale_lr_w_npoints: false
     # GOF params
-    appearance_embeddings: [0.001, 0.1, 1] #[0.001, 0.005, 0.01, 0.1] # 0.001
-    appearance_network: [0.001, 0.01, 0.1] # 0.001
+    appearance_embeddings: 0.001
+    appearance_network: 0.001
   loss:
     ssim_w: 0.2
     l1_w: 0.5
@@ -82,10 +82,11 @@ human:
     patch_size: 128
     use_patches: 1
     # GOF params
-    dist_w: [100, 1000, 5000] # 1000 # 300 # 350 # 100
-    depth_normal_w: [0.05, 0.5, 5] # 0.5 # 0.05 # 1 # 0.05
+    dist_w: 350
+    depth_normal_w: 0.05
     dist_from_iter: 0 # 3000 # 15000 # use this loss term from the beginning
     depth_normal_from_iter: 0 # 1000 # 15000 # use this loss term from the beginning
+    normal_w: [1.0, 0.1, 10.0, 100.0]
   densification_interval: 600
   opacity_reset_interval: 3000
   densify_from_iter: 3000
