--- a/cfg_files/ablation/neuman/abl_trimlp.yaml
+++ b/cfg_files/ablation/neuman/abl_trimlp.yaml
@@ -14,7 +14,7 @@ dataset:
 train:
   batch_size: 1
   num_workers: 0
-  num_steps: [7_000, 15_000, 30_000] # , 15_000
+  num_steps: [7_000, 15_000, 30_000]
   save_ckpt_interval: 15000
   val_interval: 1000
   anim_interval: 15000
@@ -86,15 +86,15 @@ human:
     depth_normal_w: 0.05
     dist_from_iter: 0 # 3000 # 15000 # use this loss term from the beginning
     depth_normal_from_iter: 0 # 1000 # 15000 # use this loss term from the beginning
-    normal_w: [1.0, 0.1, 10.0, 100.0]
+    normal_w: 100.0
   densification_interval: 600
   opacity_reset_interval: 3000
-  densify_from_iter: 30_000  # 3000 # basically, turn dennsification off for experiment w/ additional loss term
+  densify_from_iter: 3000
   densify_until_iter: 15000
   densify_grad_threshold: 0.0002
   prune_min_opacity: 0.005
   densify_extent: 1.0
-  max_n_gaussians: 250_000 # 524288
+  max_n_gaussians: 524_288
   percent_dense: 0.01
 scene:
   name: scene_gs
